--- a/tutorials/Auxiliar_3.ipynb
+++ b/tutorials/Auxiliar_3.ipynb
@@ -1943,7 +1943,7 @@
       "source": [
         "##Creating the Network\n",
         "\n",
-        "We will implement a feed-forward neural network. First we average the one-hot representations and pass the average to a fully conneted layer. The output is a softmax with the number of categories.\n",
+        "We will implement a feed-forward neural network. First we average the one-hot representations and pass the average to a fully connected layer. The output is a softmax with the number of categories.\n",
         "\n",
         "\n"
       ]
@@ -2708,7 +2708,7 @@
         "have it make guesses, and tell it if it's wrong.\n",
         "\n",
         "For the loss function ``nn.NLLLoss`` is appropriate, since the last\n",
-        "layer of the RNN is ``nn.LogSoftmax``.\n",
+        "layer of the model is ``nn.LogSoftmax``.\n",
         "\n",
         "\n"
       ]
